--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,11 +75,9 @@ dependencies:
   geolocator: ^12.0.0
   geocoding: ^3.0.0
   
-  # Notifications
-  firebase_core: ^3.8.1
-  firebase_messaging: ^15.1.6
-  firebase_auth: ^5.3.1
+  # Notifications (Local Only - No Firebase)
   flutter_local_notifications: ^19.0.0
+  socket_io_client: ^2.0.3+1
   
   # Dependency Injection
   get_it: ^7.6.4
