--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,9 +75,12 @@ dependencies:
   geolocator: ^12.0.0
   geocoding: ^3.0.0
   
-  # Notifications (Local Only - No Firebase)
+  # Notifications
   flutter_local_notifications: ^19.0.0
   socket_io_client: ^2.0.3+1
+  # Firebase for Push Notifications (External notifications when app is closed)
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
   
   # Dependency Injection
   get_it: ^7.6.4
