--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   image_picker: ^1.0.7
   path_provider: ^2.1.2
   
+  # Video Player
+  video_player: ^2.8.2
+  
   # Carousel
   carousel_slider: ^5.0.0
   
