--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,5 @@
 workflows:
-  ios-workflow:
+  default-workflow:
     name: iOS Workflow
     max_build_duration: 120
     instance_type: mac_mini_m2
@@ -8,48 +8,50 @@ workflows:
       xcode: latest
       cocoapods: default
     scripts:
-      - name: Verify Flutter and create iOS project
-        script: |
-          cd $CM_BUILD_DIR
-          echo "=== Environment Setup ==="
-          echo "Current directory: $(pwd)"
-          echo "Flutter version:"
-          flutter --version
-          echo "Flutter doctor:"
-          flutter doctor -v
-          
-          echo "=== Preparing iOS project ==="
-          # Remove incomplete iOS project if it exists
-          if [ -d "ios/Runner.xcodeproj" ] && [ ! -f "ios/Runner.xcodeproj/project.pbxproj" ]; then
-            echo "Removing incomplete xcodeproj..."
-            rm -rf ios/Runner.xcodeproj
-          fi
-          
-          # Create iOS platform files
-          echo "Creating iOS platform files..."
-          flutter create --platforms=ios . 2>&1
-          
-          # Critical verification
-          if [ ! -f "ios/Runner.xcodeproj/project.pbxproj" ]; then
-            echo "❌ CRITICAL: project.pbxproj not found after creation"
-            echo "Directory structure:"
-            find ios -type f -name "*.pbxproj" 2>/dev/null || echo "No pbxproj files found"
-            echo "ios directory:"
-            ls -la ios/ 2>/dev/null || echo "ios directory not found"
-            if [ -d "ios/Runner.xcodeproj" ]; then
-              echo "xcodeproj contents:"
-              ls -la ios/Runner.xcodeproj/ 2>/dev/null || echo "xcodeproj is empty"
-            fi
-            exit 1
-          fi
-          
-          echo "✅ iOS project created successfully"
-          echo "Project file: ios/Runner.xcodeproj/project.pbxproj"
-          ls -lh ios/Runner.xcodeproj/project.pbxproj
       - name: Get Flutter dependencies
         script: |
           cd $CM_BUILD_DIR
           flutter pub get
+      - name: Create iOS project files
+        script: |
+          cd $CM_BUILD_DIR
+          echo "=== Step 1: Checking current state ==="
+          echo "Current directory: $(pwd)"
+          
+          # Check if iOS directory exists and what's in it
+          if [ -d "ios" ]; then
+            echo "iOS directory exists"
+            if [ -d "ios/Runner.xcodeproj" ]; then
+              if [ -f "ios/Runner.xcodeproj/project.pbxproj" ]; then
+                echo "✅ project.pbxproj already exists"
+              else
+                echo "⚠️ xcodeproj exists but project.pbxproj is missing"
+                rm -rf ios/Runner.xcodeproj
+              fi
+            fi
+          fi
+          
+          echo "=== Step 2: Creating iOS platform files ==="
+          flutter create --platforms=ios . 2>&1 | head -50
+          
+          echo "=== Step 3: Verifying iOS project ==="
+          if [ ! -f "ios/Runner.xcodeproj/project.pbxproj" ]; then
+            echo "❌ ERROR: project.pbxproj was not created"
+            echo "Checking what was created:"
+            ls -la ios/ 2>/dev/null || echo "ios directory not found"
+            if [ -d "ios/Runner.xcodeproj" ]; then
+              echo "xcodeproj directory contents:"
+              ls -la ios/Runner.xcodeproj/ 2>/dev/null || echo "xcodeproj is empty"
+            fi
+            echo "Trying to find any pbxproj files:"
+            find . -name "*.pbxproj" 2>/dev/null || echo "No pbxproj files found"
+            exit 1
+          fi
+          
+          echo "✅ iOS project created successfully"
+          echo "File size: $(ls -lh ios/Runner.xcodeproj/project.pbxproj | awk '{print $5}')"
+          echo "First few lines of project.pbxproj:"
+          head -5 ios/Runner.xcodeproj/project.pbxproj
       - name: Install CocoaPods dependencies
         script: |
           cd $CM_BUILD_DIR/ios
